Fixed z-index of 'recently viewed' items.

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -285,3 +285,7 @@ footer {
 .list-remove {
   margin-left: 3px;
 }
+.viewed {
+  position: relative;
+  z-index: 4;
+}
